[package]
name = "mood"
version = "0.1.0"
authors = ["John Wells <john@attackgoat.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/attackgoat/mood"
homepage = "https://github.com/attackgoat/mood"
keywords = ["game", "vulkan"]
categories = ["game", "rendering::engine"]
description = "An example 3D FPS game using the Screen 13 rendering engine."

[features]
default = []
hot-shaders = ["screen-13-hot"]

[dependencies]
anyhow = "1.0"
bitflags = "1.3"
bmfont = { version = "0.3", default-features = false }
bytemuck = { version = "1.12", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
crossbeam-channel = "0.5"
derive_builder = "0.12"
directories = "4.0"
glam = { version = "0.23", features = ["bytemuck"] }
kira = "0.7"
pak = { path = "../pak" }
parking_lot = "0.12"
pretty_env_logger = "0.4"
rect_packer = "0.2"
screen-13 = { path = "../screen-13" }
screen-13-fx = { path = "../screen-13/contrib/screen-13-fx" }
screen-13-hot = { path = "../screen-13/contrib/screen-13-hot", optional = true }
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"

[build-dependencies]
anyhow = "1.0"
bincode = "1.3"
glob = "0.3"
lazy_static = "1.4"
log = "0.4"
pak = { path = "../pak", features = ["bake"] }
raster-fonts = { path = "../raster-fonts-fork", features = ["bin"] } #"0.1.1"
serde = { version = "1.0", features = ["derive"] }
shader-prepper = "0.3.0-pre.3"
shaderc = "0.8"
simplelog = "0.12"
toml = "0.7"

[dev-dependencies]
rand = { version = "0.8", features = ["small_rng"] }
